# rs-migrate-liquid

./: .gitignore  Cargo.toml
interaction/: devnet.snippets.sh  mainnet.snippets.sh
meta/: Cargo.toml
meta/src/: main.rs
output/: migrate.abi.json  migrate.imports.json  migrate.mxsc.json  migrate.wasm
src/: migrate.rs  proxy_liquid.rs  proxy_market.rs  proxy_segld.rs  storage.rs  utils.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
