[package]
name = "migrate"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false

[lib]
path = "src/migrate.rs"

[dependencies.multiversx-sc]
version = "0.54.0"

[dev-dependencies]
num-bigint = "0.4.6"

[dev-dependencies.multiversx-sc-scenario]
version = "0.54.0"

[workspace]
members = [
    ".",
    "meta",
]
